--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="google161b1e443fc529fa.html"/>
     <meta name="description" content="Sell, Buy, Rent & Advertise in Rwanda"/>
     <base href="/" />
-    <title>Sell, Buy, Rent & Advertise in Rwanda</title>
+    <title>Click Rwanda</title>
   </head>
   <body>
     <div id="root"></div>
