--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/click.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="google161b1e443fc529fa.html"/>
-    <meta name="description" content="Sell, Buy, Rent & Advertise in Rwanda"/>
+    <meta name="description" content="Click Rwanda is one of the leading classified ads platforms that enable users buy, sell, advertise their products and services on the Rwandan market in a few clicks"/>
+    <meta name="keywords" content="clickrwanda, sell in Rwanda, Rwanda, rent in rwanda, buy in rwanda, advertise in rwanda, rwanda marketplace, buy, rent, advertise" />
+    <meta name="author" content="Dushime Brother - Software Developer"/>
+    <meta http-equiv="cache-control" content="no-cache"/>
+    <meta http-equiv="refresh" content="0; url=https://www.clickrwanda.com"/>
     <base href="/" />
-    <title>Click Rwanda</title>
+    <title>Sell, Buy, Rent & Advertise in Rwanda</title>
   </head>
   <body>
     <div id="root"></div>
