added the google analytics scripts

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <meta http-equiv="cache-control" content="no-cache"/>
     <base href="/" />
     <title>Sell, Buy, Rent & Advertise in Rwanda</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CMY4QLJ2XV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CMY4QLJ2XV');
+    </script>
   </head>
   <body>
     <div id="root"></div>
