--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Clickrwanda, sell in Rwanda,buy and sell anything in Rwanda, rent in rwanda, buy in rwanda, advertise in rwanda, rwanda marketplace, buy, rent, advertise" />
     <meta name="author" content="Dushime Brother - Software Developer"/>
     <meta http-equiv="cache-control" content="no-cache"/>
+    <meta name="google-adsense-account" content="ca-pub-9673043592577260">
     <base href="/" />
     <title>Sell, Buy, Rent & Advertise in Rwanda</title>
     <!-- Google tag (gtag.js) -->
