added agent managment

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
       gtag('config', 'G-CMY4QLJ2XV');
     </script>
+    <!-- <script type='text/javascript' src='//pl23583777.highrevenuenetwork.com/7c/17/46/7c174608f655d43e85db72982301919a.js'></script> -->
   </head>
   <body>
     <div id="root"></div>
