updated the agent management, added meta tags for opengrah for the index html file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <meta http-equiv="cache-control" content="no-cache"/>
     <meta name="google-adsense-account" content="ca-pub-9673043592577260">
     <base href="/" />
+
+    <meta property="og:title" content="Sell, Buy, Rent & Advertise in Rwanda" />
+    <meta property="og:description" content="Click Rwanda is one of the leading classified ads platforms that enable users buy, sell, advertise their products and services on the Rwandan market in a few clicks" />
+    <meta property="og:image" content="./public/CR.png" />
+    <meta property="og:url" content="https://clickrwanda.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Click Rwanda" />
     <title>Sell, Buy, Rent & Advertise in Rwanda</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CMY4QLJ2XV"></script>
