updated the open grahp image meta atg

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta property="og:title" content="Sell, Buy, Rent & Advertise in Rwanda" />
     <meta property="og:description" content="Click Rwanda is one of the leading classified ads platforms that enable users buy, sell, advertise their products and services on the Rwandan market in a few clicks" />
-    <meta property="og:image" content="./public/CR.png" />
+    <meta property="og:image" content="https://s3.eu-north-1.amazonaws.com/clickrwanda.s3.com/logos/CR.png" />
     <meta property="og:url" content="https://clickrwanda.com" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Click Rwanda" />
