--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </script>
     <!-- <script type='text/javascript' src='//pl23583777.highrevenuenetwork.com/7c/17/46/7c174608f655d43e85db72982301919a.js'></script> -->
   </head>
-  <body class="w-full max-w-[1512px] mx-auto px-[1%] md:px-[2%] bg-gray-50 ">
-    <div id="root"></div>
+  <body class="w-full max-w-[1512px] mx-auto px-[1%] md:px-[2%] bg-gray-50 relative ">
+    <div id="root" class="w-full relative" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
