updated the advert page

--- a/index.html
+++ b/index.html
@@ -33,5 +33,15 @@
   <body class="w-full max-w-[1512px] mx-auto px-[1%] md:px-[2%] bg-gray-50 relative ">
     <div id="root" class="w-full relative" ></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          { pageLanguage: 'en' },
+          'google_translate_element'
+        );
+      }
+    </script>
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
+    
   </body>
 </html>
